--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "live-server public"
+    "start": "live-server public",
+    "deploy": "git subtree push --prefix public origin gh-pages"
   },
   "keywords": [],
   "author": "",
